added a description and tent photo

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,9 +13,20 @@
 
 }
 
+.personal {
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px
+}
 
+.description {
+  font-family: Verdana;
+  font-size: 21px;
+  color: grey
+}
 /* Tag  */
 body {
   background-color: black;
   text-align: center;
+  color: white;
 }
